FIPS-1953/FIPS-2486 :: replace calls new Integer, new Long, new IntegerRange and fix some checkstyle warnings